// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots of selectors/profile matches the last stored run of getProfile 1`] = `
Object {
  "meta": Object {
    "abi": "",
    "appBuildID": "",
    "categories": Array [
      Object {
        "color": "transparent",
        "name": "Idle",
      },
      Object {
        "color": "grey",
        "name": "Other",
      },
      Object {
        "color": "purple",
        "name": "Layout",
      },
      Object {
        "color": "yellow",
        "name": "JavaScript",
      },
      Object {
        "color": "orange",
        "name": "GC / CC",
      },
      Object {
        "color": "lightblue",
        "name": "Network",
      },
      Object {
        "color": "green",
        "name": "Graphics",
      },
      Object {
        "color": "blue",
        "name": "DOM",
      },
    ],
    "extensions": Object {
      "baseURL": Array [],
      "id": Array [],
      "length": 0,
      "name": Array [],
    },
    "interval": 1,
    "logicalCPUs": 0,
    "misc": "",
    "oscpu": "",
    "physicalCPUs": 0,
    "platform": "",
    "preprocessedProfileVersion": 21,
    "processType": 0,
    "product": "Firefox",
    "sourceURL": "",
    "stackwalk": 0,
    "startTime": 0,
    "toolkit": "",
    "version": 14,
  },
  "pages": Array [],
  "threads": Array [
    Object {
      "frameTable": Object {
        "address": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "category": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "column": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "func": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
        ],
        "implementation": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "length": 9,
        "line": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "optimizations": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
      },
      "funcTable": Object {
        "address": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "columnNumber": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "fileName": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "isJS": Array [
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
        ],
        "length": 9,
        "lineNumber": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "name": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
        ],
        "relevantForJS": Array [
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
        ],
        "resource": Array [
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
        ],
      },
      "libs": Array [],
      "markers": Object {
        "data": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "RedirectURI": "https://mozilla.org",
            "URI": "https://mozilla.org",
            "endTime": 7,
            "id": 6,
            "pri": 0,
            "startTime": 6,
            "status": "STOP",
            "type": "Network",
          },
          Object {
            "RedirectURI": "https://mozilla.org",
            "URI": "https://mozilla.org",
            "endTime": 8,
            "id": 7,
            "pri": 0,
            "startTime": 7,
            "status": "STOP",
            "type": "Network",
          },
        ],
        "length": 8,
        "name": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          6,
        ],
        "time": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
        ],
      },
      "name": "Thread with samples",
      "pausedRanges": Array [],
      "pid": 0,
      "processShutdownTime": null,
      "processStartupTime": 0,
      "processType": "default",
      "registerTime": 0,
      "resourceTable": Object {
        "host": Array [],
        "length": 0,
        "lib": Array [],
        "name": Array [],
        "type": Array [],
      },
      "samples": Object {
        "length": 9,
        "responsiveness": Array [
          0,
          0,
          0,
          0,
          100,
          0,
          0,
          0,
          0,
        ],
        "stack": Array [
          4,
          4,
          4,
          6,
          6,
          6,
          8,
          8,
          8,
        ],
        "time": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
        ],
      },
      "stackTable": Object {
        "category": Array [
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "frame": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
        ],
        "length": 9,
        "prefix": Array [
          null,
          0,
          1,
          2,
          3,
          2,
          5,
          1,
          7,
        ],
      },
      "stringTable": UniqueStringArray {
        "_array": Array [
          "A",
          "B",
          "C",
          "D",
          "E",
          "F",
          "G",
          "H",
          "I",
        ],
        "_stringToIndex": Map {
          "A" => 0,
          "B" => 1,
          "C" => 2,
          "D" => 3,
          "E" => 4,
          "F" => 5,
          "G" => 6,
          "H" => 7,
          "I" => 8,
        },
      },
      "tid": 0,
      "unregisterTime": null,
    },
    Object {
      "frameTable": Object {
        "address": Array [],
        "category": Array [],
        "column": Array [],
        "func": Array [],
        "implementation": Array [],
        "length": 0,
        "line": Array [],
        "optimizations": Array [],
      },
      "funcTable": Object {
        "address": Array [],
        "columnNumber": Array [],
        "fileName": Array [],
        "isJS": Array [],
        "length": 0,
        "lineNumber": Array [],
        "name": Array [],
        "relevantForJS": Array [],
        "resource": Array [],
      },
      "libs": Array [],
      "markers": Object {
        "data": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "RedirectURI": "https://mozilla.org",
            "URI": "https://mozilla.org",
            "endTime": 7,
            "id": 6,
            "pri": 0,
            "startTime": 6,
            "status": "STOP",
            "type": "Network",
          },
          Object {
            "RedirectURI": "https://mozilla.org",
            "URI": "https://mozilla.org",
            "endTime": 8,
            "id": 7,
            "pri": 0,
            "startTime": 7,
            "status": "STOP",
            "type": "Network",
          },
        ],
        "length": 8,
        "name": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          6,
        ],
        "time": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
        ],
      },
      "name": "Thread with markers",
      "pausedRanges": Array [],
      "pid": 0,
      "processShutdownTime": null,
      "processStartupTime": 0,
      "processType": "default",
      "registerTime": 0,
      "resourceTable": Object {
        "host": Array [],
        "length": 0,
        "lib": Array [],
        "name": Array [],
        "type": Array [],
      },
      "samples": Object {
        "length": 2,
        "responsiveness": Array [
          null,
          null,
        ],
        "stack": Array [
          null,
          null,
        ],
        "time": Array [
          0,
          8,
        ],
      },
      "stackTable": Object {
        "category": Array [],
        "frame": Array [],
        "length": 0,
        "prefix": Array [],
      },
      "stringTable": UniqueStringArray {
        "_array": Array [
          "A",
          "B",
          "C",
          "D",
          "E",
          "F",
          "Load 123: https://mozilla.org",
        ],
        "_stringToIndex": Map {
          "A" => 0,
          "B" => 1,
          "C" => 2,
          "D" => 3,
          "E" => 4,
          "F" => 5,
          "Load 123: https://mozilla.org" => 6,
        },
      },
      "tid": 0,
      "unregisterTime": null,
    },
  ],
}
`;

exports[`snapshots of selectors/profile matches the last stored run of getThreads 1`] = `
Array [
  Object {
    "frameTable": Object {
      "address": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "category": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "column": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "func": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "implementation": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "length": 9,
      "line": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "optimizations": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
    },
    "funcTable": Object {
      "address": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "columnNumber": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "fileName": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "isJS": Array [
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
      ],
      "length": 9,
      "lineNumber": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "name": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "relevantForJS": Array [
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
      ],
      "resource": Array [
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
      ],
    },
    "libs": Array [],
    "markers": Object {
      "data": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        Object {
          "RedirectURI": "https://mozilla.org",
          "URI": "https://mozilla.org",
          "endTime": 7,
          "id": 6,
          "pri": 0,
          "startTime": 6,
          "status": "STOP",
          "type": "Network",
        },
        Object {
          "RedirectURI": "https://mozilla.org",
          "URI": "https://mozilla.org",
          "endTime": 8,
          "id": 7,
          "pri": 0,
          "startTime": 7,
          "status": "STOP",
          "type": "Network",
        },
      ],
      "length": 8,
      "name": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        6,
      ],
      "time": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
      ],
    },
    "name": "Thread with samples",
    "pausedRanges": Array [],
    "pid": 0,
    "processShutdownTime": null,
    "processStartupTime": 0,
    "processType": "default",
    "registerTime": 0,
    "resourceTable": Object {
      "host": Array [],
      "length": 0,
      "lib": Array [],
      "name": Array [],
      "type": Array [],
    },
    "samples": Object {
      "length": 9,
      "responsiveness": Array [
        0,
        0,
        0,
        0,
        100,
        0,
        0,
        0,
        0,
      ],
      "stack": Array [
        4,
        4,
        4,
        6,
        6,
        6,
        8,
        8,
        8,
      ],
      "time": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
    },
    "stackTable": Object {
      "category": Array [
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
      ],
      "frame": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "length": 9,
      "prefix": Array [
        null,
        0,
        1,
        2,
        3,
        2,
        5,
        1,
        7,
      ],
    },
    "stringTable": UniqueStringArray {
      "_array": Array [
        "A",
        "B",
        "C",
        "D",
        "E",
        "F",
        "G",
        "H",
        "I",
      ],
      "_stringToIndex": Map {
        "A" => 0,
        "B" => 1,
        "C" => 2,
        "D" => 3,
        "E" => 4,
        "F" => 5,
        "G" => 6,
        "H" => 7,
        "I" => 8,
      },
    },
    "tid": 0,
    "unregisterTime": null,
  },
  Object {
    "frameTable": Object {
      "address": Array [],
      "category": Array [],
      "column": Array [],
      "func": Array [],
      "implementation": Array [],
      "length": 0,
      "line": Array [],
      "optimizations": Array [],
    },
    "funcTable": Object {
      "address": Array [],
      "columnNumber": Array [],
      "fileName": Array [],
      "isJS": Array [],
      "length": 0,
      "lineNumber": Array [],
      "name": Array [],
      "relevantForJS": Array [],
      "resource": Array [],
    },
    "libs": Array [],
    "markers": Object {
      "data": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        Object {
          "RedirectURI": "https://mozilla.org",
          "URI": "https://mozilla.org",
          "endTime": 7,
          "id": 6,
          "pri": 0,
          "startTime": 6,
          "status": "STOP",
          "type": "Network",
        },
        Object {
          "RedirectURI": "https://mozilla.org",
          "URI": "https://mozilla.org",
          "endTime": 8,
          "id": 7,
          "pri": 0,
          "startTime": 7,
          "status": "STOP",
          "type": "Network",
        },
      ],
      "length": 8,
      "name": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        6,
      ],
      "time": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
      ],
    },
    "name": "Thread with markers",
    "pausedRanges": Array [],
    "pid": 0,
    "processShutdownTime": null,
    "processStartupTime": 0,
    "processType": "default",
    "registerTime": 0,
    "resourceTable": Object {
      "host": Array [],
      "length": 0,
      "lib": Array [],
      "name": Array [],
      "type": Array [],
    },
    "samples": Object {
      "length": 2,
      "responsiveness": Array [
        null,
        null,
      ],
      "stack": Array [
        null,
        null,
      ],
      "time": Array [
        0,
        8,
      ],
    },
    "stackTable": Object {
      "category": Array [],
      "frame": Array [],
      "length": 0,
      "prefix": Array [],
    },
    "stringTable": UniqueStringArray {
      "_array": Array [
        "A",
        "B",
        "C",
        "D",
        "E",
        "F",
        "Load 123: https://mozilla.org",
      ],
      "_stringToIndex": Map {
        "A" => 0,
        "B" => 1,
        "C" => 2,
        "D" => 3,
        "E" => 4,
        "F" => 5,
        "Load 123: https://mozilla.org" => 6,
      },
    },
    "tid": 0,
    "unregisterTime": null,
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedNodeSelectors.getTimingsForSidebar 1`] = `
Object {
  "forFunc": Object {
    "selfTime": Object {
      "breakdownByCategory": null,
      "breakdownByImplementation": null,
      "value": 0,
    },
    "totalTime": Object {
      "breakdownByCategory": Array [
        0,
        2,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "breakdownByImplementation": Object {
        "native": 2,
      },
      "value": 2,
    },
  },
  "forPath": Object {
    "selfTime": Object {
      "breakdownByCategory": null,
      "breakdownByImplementation": null,
      "value": 0,
    },
    "totalTime": Object {
      "breakdownByCategory": Array [
        0,
        2,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "breakdownByImplementation": Object {
        "native": 2,
      },
      "value": 2,
    },
  },
  "rootTime": 2,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getCallNodeInfo 1`] = `
Object {
  "callNodeTable": Object {
    "category": Int32Array [
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
    ],
    "depth": Array [
      0,
      1,
      2,
      3,
      2,
      3,
      2,
      3,
    ],
    "func": Int32Array [
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 8,
    "prefix": Int32Array [
      -1,
      0,
      1,
      2,
      1,
      4,
      1,
      6,
    ],
  },
  "stackIndexToCallNodeIndex": Uint32Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
  ],
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getCallTree 1`] = `
CallTree {
  "_callNodeChildCount": Uint32Array [
    1,
    1,
    0,
    0,
    1,
    0,
    0,
    0,
  ],
  "_callNodeTable": Object {
    "category": Int32Array [
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
    ],
    "depth": Array [
      0,
      1,
      2,
      3,
      2,
      3,
      2,
      3,
    ],
    "func": Int32Array [
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 8,
    "prefix": Int32Array [
      -1,
      0,
      1,
      2,
      1,
      4,
      1,
      6,
    ],
  },
  "_callNodeTimes": Object {
    "selfTime": Float32Array [
      0,
      0,
      0,
      0,
      0,
      2,
      0,
      0,
    ],
    "totalTime": Float32Array [
      2,
      2,
      0,
      0,
      2,
      2,
      0,
      0,
    ],
  },
  "_categories": Array [
    Object {
      "color": "transparent",
      "name": "Idle",
    },
    Object {
      "color": "grey",
      "name": "Other",
    },
    Object {
      "color": "purple",
      "name": "Layout",
    },
    Object {
      "color": "yellow",
      "name": "JavaScript",
    },
    Object {
      "color": "orange",
      "name": "GC / CC",
    },
    Object {
      "color": "lightblue",
      "name": "Network",
    },
    Object {
      "color": "green",
      "name": "Graphics",
    },
    Object {
      "color": "blue",
      "name": "DOM",
    },
  ],
  "_children": Array [],
  "_displayDataByIndex": Map {},
  "_funcTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "columnNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "relevantForJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "_isIntegerInterval": true,
  "_jsOnly": false,
  "_resourceTable": Object {
    "host": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "_rootCount": 1,
  "_rootTotalTime": 2,
  "_stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getCommittedRangeFilteredMarkers 1`] = `
Array [
  Object {
    "data": null,
    "dur": 100,
    "markerIndex": 0,
    "name": "Jank",
    "start": -96,
    "title": "100.00ms event processing delay",
  },
  Object {
    "data": null,
    "dur": 0,
    "markerIndex": 4,
    "name": "D",
    "start": 3,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "markerIndex": 5,
    "name": "E",
    "start": 4,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "markerIndex": 6,
    "name": "F",
    "start": 5,
    "title": null,
  },
  Object {
    "data": Object {
      "RedirectURI": "https://mozilla.org",
      "URI": "https://mozilla.org",
      "endTime": 7,
      "id": 6,
      "pri": 0,
      "startTime": 6,
      "status": "STOP",
      "type": "Network",
    },
    "dur": 1,
    "markerIndex": 7,
    "name": "G",
    "start": 6,
    "title": null,
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getCommittedRangeFilteredMarkersForHeader 1`] = `
Array [
  Object {
    "data": null,
    "dur": 0,
    "markerIndex": 4,
    "name": "D",
    "start": 3,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "markerIndex": 5,
    "name": "E",
    "start": 4,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "markerIndex": 6,
    "name": "F",
    "start": 5,
    "title": null,
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getFilteredThread 1`] = `
Object {
  "frameTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "column": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "implementation": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "optimizations": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  "funcTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "columnNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "relevantForJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "libs": Array [],
  "markers": Object {
    "data": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      Object {
        "RedirectURI": "https://mozilla.org",
        "URI": "https://mozilla.org",
        "endTime": 7,
        "id": 6,
        "pri": 0,
        "startTime": 6,
        "status": "STOP",
        "type": "Network",
      },
      Object {
        "RedirectURI": "https://mozilla.org",
        "URI": "https://mozilla.org",
        "endTime": 8,
        "id": 7,
        "pri": 0,
        "startTime": 7,
        "status": "STOP",
        "type": "Network",
      },
    ],
    "length": 8,
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      6,
    ],
    "time": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
    ],
  },
  "name": "Thread with samples",
  "pausedRanges": Array [],
  "pid": 0,
  "processShutdownTime": null,
  "processStartupTime": 0,
  "processType": "default",
  "registerTime": 0,
  "resourceTable": Object {
    "host": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "length": 4,
    "responsiveness": Array [
      0,
      100,
      0,
      0,
    ],
    "stack": Array [
      5,
      5,
      5,
      7,
    ],
    "time": Array [
      3,
      4,
      5,
      6,
    ],
  },
  "stackTable": Object {
    "category": Array [
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
    ],
    "frame": Array [
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 8,
    "prefix": Array [
      null,
      0,
      1,
      2,
      1,
      4,
      1,
      6,
    ],
  },
  "stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
  "tid": 0,
  "unregisterTime": null,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getFlameGraphTiming 1`] = `
Array [
  Object {
    "callNode": Array [
      0,
    ],
    "end": Array [
      1,
    ],
    "length": 1,
    "selfTimeRelative": Array [
      0,
    ],
    "start": Array [
      0,
    ],
  },
  Object {
    "callNode": Array [
      1,
    ],
    "end": Array [
      1,
    ],
    "length": 1,
    "selfTimeRelative": Array [
      0,
    ],
    "start": Array [
      0,
    ],
  },
  Object {
    "callNode": Array [
      4,
    ],
    "end": Array [
      1,
    ],
    "length": 1,
    "selfTimeRelative": Array [
      0,
    ],
    "start": Array [
      0,
    ],
  },
  Object {
    "callNode": Array [
      5,
    ],
    "end": Array [
      1,
    ],
    "length": 1,
    "selfTimeRelative": Array [
      1,
    ],
    "start": Array [
      0,
    ],
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getJankMarkersForHeader 1`] = `
Array [
  Object {
    "data": null,
    "dur": 100,
    "markerIndex": 0,
    "name": "Jank",
    "start": -96,
    "title": "100.00ms event processing delay",
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getMarkerChartTiming 1`] = `
Array [
  Object {
    "end": Array [
      4,
    ],
    "index": Array [
      0,
    ],
    "label": Array [
      "",
    ],
    "length": 1,
    "name": "Jank",
    "start": Array [
      -96,
    ],
  },
  Object {
    "end": Array [
      3,
    ],
    "index": Array [
      1,
    ],
    "label": Array [
      "",
    ],
    "length": 1,
    "name": "D",
    "start": Array [
      3,
    ],
  },
  Object {
    "end": Array [
      4,
    ],
    "index": Array [
      2,
    ],
    "label": Array [
      "",
    ],
    "length": 1,
    "name": "E",
    "start": Array [
      4,
    ],
  },
  Object {
    "end": Array [
      5,
    ],
    "index": Array [
      3,
    ],
    "label": Array [
      "",
    ],
    "length": 1,
    "name": "F",
    "start": Array [
      5,
    ],
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getMarkers 1`] = `
Array [
  Object {
    "data": null,
    "dur": 100,
    "markerIndex": 0,
    "name": "Jank",
    "start": -96,
    "title": "100.00ms event processing delay",
  },
  Object {
    "data": null,
    "dur": 0,
    "markerIndex": 1,
    "name": "A",
    "start": 0,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "markerIndex": 2,
    "name": "B",
    "start": 1,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "markerIndex": 3,
    "name": "C",
    "start": 2,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "markerIndex": 4,
    "name": "D",
    "start": 3,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "markerIndex": 5,
    "name": "E",
    "start": 4,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "markerIndex": 6,
    "name": "F",
    "start": 5,
    "title": null,
  },
  Object {
    "data": Object {
      "RedirectURI": "https://mozilla.org",
      "URI": "https://mozilla.org",
      "endTime": 7,
      "id": 6,
      "pri": 0,
      "startTime": 6,
      "status": "STOP",
      "type": "Network",
    },
    "dur": 1,
    "markerIndex": 7,
    "name": "G",
    "start": 6,
    "title": null,
  },
  Object {
    "data": Object {
      "RedirectURI": "https://mozilla.org",
      "URI": "https://mozilla.org",
      "endTime": 8,
      "id": 7,
      "pri": 0,
      "startTime": 7,
      "status": "STOP",
      "type": "Network",
    },
    "dur": 1,
    "markerIndex": 8,
    "name": "G",
    "start": 7,
    "title": null,
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getNetworkChartTiming 1`] = `
Array [
  Object {
    "end": Array [
      7,
    ],
    "index": Array [
      0,
    ],
    "label": Array [
      "",
    ],
    "length": 1,
    "name": "G",
    "start": Array [
      6,
    ],
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getPreviewFilteredThread 1`] = `
Object {
  "frameTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "column": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "implementation": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "optimizations": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  "funcTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "columnNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "relevantForJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "libs": Array [],
  "markers": Object {
    "data": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      Object {
        "RedirectURI": "https://mozilla.org",
        "URI": "https://mozilla.org",
        "endTime": 7,
        "id": 6,
        "pri": 0,
        "startTime": 6,
        "status": "STOP",
        "type": "Network",
      },
      Object {
        "RedirectURI": "https://mozilla.org",
        "URI": "https://mozilla.org",
        "endTime": 8,
        "id": 7,
        "pri": 0,
        "startTime": 7,
        "status": "STOP",
        "type": "Network",
      },
    ],
    "length": 8,
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      6,
    ],
    "time": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
    ],
  },
  "name": "Thread with samples",
  "pausedRanges": Array [],
  "pid": 0,
  "processShutdownTime": null,
  "processStartupTime": 0,
  "processType": "default",
  "registerTime": 0,
  "resourceTable": Object {
    "host": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "length": 2,
    "responsiveness": Array [
      100,
      0,
    ],
    "stack": Array [
      5,
      5,
    ],
    "time": Array [
      4,
      5,
    ],
  },
  "stackTable": Object {
    "category": Array [
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
    ],
    "frame": Array [
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 8,
    "prefix": Array [
      null,
      0,
      1,
      2,
      1,
      4,
      1,
      6,
    ],
  },
  "stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
  "tid": 0,
  "unregisterTime": null,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getProcessedRawMarkerTable 1`] = `
Object {
  "data": Array [
    null,
    null,
    null,
    null,
    null,
    null,
    Object {
      "RedirectURI": "https://mozilla.org",
      "URI": "https://mozilla.org",
      "endTime": 7,
      "id": 6,
      "pri": 0,
      "startTime": 6,
      "status": "STOP",
      "type": "Network",
    },
    Object {
      "RedirectURI": "https://mozilla.org",
      "URI": "https://mozilla.org",
      "endTime": 8,
      "id": 7,
      "pri": 0,
      "startTime": 7,
      "status": "STOP",
      "type": "Network",
    },
  ],
  "length": 8,
  "name": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    6,
  ],
  "time": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
  ],
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getRangeAndTransformFilteredThread 1`] = `
Object {
  "frameTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "column": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "implementation": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "optimizations": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  "funcTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "columnNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "relevantForJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "libs": Array [],
  "markers": Object {
    "data": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      Object {
        "RedirectURI": "https://mozilla.org",
        "URI": "https://mozilla.org",
        "endTime": 7,
        "id": 6,
        "pri": 0,
        "startTime": 6,
        "status": "STOP",
        "type": "Network",
      },
      Object {
        "RedirectURI": "https://mozilla.org",
        "URI": "https://mozilla.org",
        "endTime": 8,
        "id": 7,
        "pri": 0,
        "startTime": 7,
        "status": "STOP",
        "type": "Network",
      },
    ],
    "length": 8,
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      6,
    ],
    "time": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
    ],
  },
  "name": "Thread with samples",
  "pausedRanges": Array [],
  "pid": 0,
  "processShutdownTime": null,
  "processStartupTime": 0,
  "processType": "default",
  "registerTime": 0,
  "resourceTable": Object {
    "host": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "length": 4,
    "responsiveness": Array [
      0,
      100,
      0,
      0,
    ],
    "stack": Array [
      5,
      5,
      5,
      7,
    ],
    "time": Array [
      3,
      4,
      5,
      6,
    ],
  },
  "stackTable": Object {
    "category": Array [
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
    ],
    "frame": Array [
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 8,
    "prefix": Array [
      null,
      0,
      1,
      2,
      1,
      4,
      1,
      6,
    ],
  },
  "stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
  "tid": 0,
  "unregisterTime": null,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getRangeFilteredThread 1`] = `
Object {
  "frameTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "column": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "implementation": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "optimizations": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  "funcTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "columnNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "relevantForJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "libs": Array [],
  "markers": Object {
    "data": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      Object {
        "RedirectURI": "https://mozilla.org",
        "URI": "https://mozilla.org",
        "endTime": 7,
        "id": 6,
        "pri": 0,
        "startTime": 6,
        "status": "STOP",
        "type": "Network",
      },
      Object {
        "RedirectURI": "https://mozilla.org",
        "URI": "https://mozilla.org",
        "endTime": 8,
        "id": 7,
        "pri": 0,
        "startTime": 7,
        "status": "STOP",
        "type": "Network",
      },
    ],
    "length": 8,
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      6,
    ],
    "time": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
    ],
  },
  "name": "Thread with samples",
  "pausedRanges": Array [],
  "pid": 0,
  "processShutdownTime": null,
  "processStartupTime": 0,
  "processType": "default",
  "registerTime": 0,
  "resourceTable": Object {
    "host": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "length": 4,
    "responsiveness": Array [
      0,
      100,
      0,
      0,
    ],
    "stack": Array [
      6,
      6,
      6,
      8,
    ],
    "time": Array [
      3,
      4,
      5,
      6,
    ],
  },
  "stackTable": Object {
    "category": Array [
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
    ],
    "frame": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 9,
    "prefix": Array [
      null,
      0,
      1,
      2,
      3,
      2,
      5,
      1,
      7,
    ],
  },
  "stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
  "tid": 0,
  "unregisterTime": null,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getSearchFilteredMarkers 1`] = `
Array [
  Object {
    "data": null,
    "dur": 100,
    "markerIndex": 0,
    "name": "Jank",
    "start": -96,
    "title": "100.00ms event processing delay",
  },
  Object {
    "data": null,
    "dur": 0,
    "markerIndex": 4,
    "name": "D",
    "start": 3,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "markerIndex": 5,
    "name": "E",
    "start": 4,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "markerIndex": 6,
    "name": "F",
    "start": 5,
    "title": null,
  },
  Object {
    "data": Object {
      "RedirectURI": "https://mozilla.org",
      "URI": "https://mozilla.org",
      "endTime": 7,
      "id": 6,
      "pri": 0,
      "startTime": 6,
      "status": "STOP",
      "type": "Network",
    },
    "dur": 1,
    "markerIndex": 7,
    "name": "G",
    "start": 6,
    "title": null,
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getThreadProcessDetails 1`] = `
"thread: \\"Thread with samples\\" (0)
process: \\"default\\" (0)"
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getViewOptions 1`] = `
Object {
  "expandedCallNodePaths": PathSet {
    "_table": Map {
      "0" => Array [
        0,
      ],
      "0-1" => Array [
        0,
        1,
      ],
    },
  },
  "selectedCallNodePath": Array [
    0,
    1,
  ],
  "selectedMarker": 1,
}
`;
